# soiling_analysis

./: .env.example  .gitignore  CNAME  HANDOFF.md  README.md  index.html  pyproject.toml  render.yaml  requirements.txt  styles.css
docs/: IMPLEMENTATION_PLAN.md  PARAMETER_MAPPING.md  WORKFLOW.md
scripts/: alpha_sweep.py
soiling_analysis/: __init__.py  analysis.py  cleaning_events.py  config.py  data_quality.py  env.py  hampel.py  repository.py  run.py  soiling_rate.py  web_server.py
tests/: test_cleaning_events.py  test_hampel.py  test_soiling_rate.py
